{
    "expense_tracker": "Expense Management",
    "add_expense": "Add a New Expense",
    "description": "Expense Description",
    "select_date": "Choose a Date",
    "select_category": "Choose a Category",
    "amount": "Total Amount",
    "enter_amount": "Please enter the amount",
    "date_hint": "Format: DD/MM/YYYY",
    "add": "Submit",
    "expense": "Expense Record",
    "today": "Today's Expenses",
    "amount_empty": "Amount cannot be left blank",
    "category_empty": "Please select a category",
    "date_empty": "Please choose a date",
    "spent_this_week": "Expenditure This Week",
    "add_expense_success": "Expense successfully added",
    "delete_expense_success": "Expense successfully deleted",
    "add_expense_failed": "Unable to add expense",
    "delete_expense_failed": "Unable to delete expense",
    "not_having_expenses": "No expenses recorded yet",
    "highest_spending": "highest spending",
    "enter_description_here": "Add your description here..."
}